# Seer

./: .gitignore  .travis.yml  1 event - 3 steps.json  2 events - 3 steps.json  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  Seer.hpp
benchmarks/: BenchMain.cpp  CMakeLists.txt
documentation/: DataFlow.md  Internals.md
enc_temp_folder/66ad43052e0afef5b8f5115ac731582/: Seer.hpp
include/: BaseListener.hpp  BaseProducer.hpp  BaseSink.hpp  DataPoint.hpp  Network.hpp  NetworkPipe.hpp  Pipe.hpp  ScopeTimer.hpp  Seer.hpp  Sink.hpp  Timer.hpp  WebSocket.hpp
include/DataPoint/: DataPoint.hpp  TimePoint.hpp
src/: BaseProducer.cpp  CMakeLists.txt  Network.cpp  Pipe.cpp  ScopeTimer.cpp  Timer.cpp  WebSocket.cpp  main.cpp
tests/: AsyncTimer.cpp  Buffer.cpp  CMakeLists.txt  CatchMain.cpp  Counter.cpp  InstantEvent.cpp  Mark.cpp  ScopeTimer.cpp  SetProcessName.cpp  SetThreadName.cpp  Test.cpp  TestMain.cpp  Timer.cpp
tests/Util/: TestHelper.hpp
tests/src/: CatchMain.cpp  HelperSink.hpp  Pipe.spec.cpp  PipeSpy.hpp  ScopeTimer.spec.cpp  Sink.spec.cpp  TestHelper.hpp  TestMain.cpp  Timer.spec.cpp
tests/src/Util/: PipeSpy.hpp
web/seer/: .angular-cli.json  README.md  package-lock.json  package.json  tslint.json
web/seer/e2e/: app.e2e-spec.ts  app.po.ts
web/seer/src/: index.html  styles.css  theme.scss
web/seer/src/app/: app.component.html  app.component.ts  app.module.ts
web/seer/src/app/classes/: connnection-meta.ts
web/seer/src/app/classes/seer/: index.ts  seer.ts
web/seer/src/app/classes/seer/seer-protocol/: base-point.ts  index.ts  time-point.ts
web/seer/src/app/dashboard/: dashboard.component.html  dashboard.component.ts
web/seer/src/app/modules/seer-material-module/: seer-material-module.module.ts
web/seer/src/app/services/active-connections/: active-connections.service.spec.ts  active-connections.service.ts
web/seer/src/app/services/connection-history/: connection-history.service.spec.ts  connection-history.service.ts
web/seer/src/app/services/seer-connection/: seer-connection.service.spec.ts  seer-connection.service.ts
web/seer/src/app/services/seer-connection/connection/: connection.ts
web/seer/src/app/views/dashboard/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts  tab.ts
web/seer/src/app/views/dashboard/connection/: connection.component.html  connection.component.scss  connection.component.ts
web/seer/src/app/views/dashboard/new-connection/: new-connection.component.html  new-connection.component.scss  new-connection.component.spec.ts  new-connection.component.ts
